FLY wire David/force-app/main/default/objects/Unrolled_Matrix__c/Unrolled_Matrix__c.object-meta.xml
<CustomObject>
    <description>Look-up table that allows Analytics to map transactions to the most granular combination of attributes and then roll-up to Attribute Codes for usage.
BOPI-515</description>
    <label>Unrolled Matrix</label>
    <nameField>
        <displayFormat>UM-{00000}</displayFormat>
        <label>Unrolled Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unrolled Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>