FLY wire David/force-app/main/default/objects/Unrolled_Matrix__c/fields/Attribute_Combo_Key__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Combo_Key__c</fullName>
    <description>Created for BOPI-515</description>
    <label>Attribute Combo Key</label>
    <type>TextArea</type>
</CustomField>