FLY wire David/force-app/main/default/objects/Unrolled_Matrix__c/fields/Non_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Non_Local_Currency__c</fullName>
    <description>Created for BOPI-515</description>
    <inlineHelpText>Is this for the Account&apos;s local currency?</inlineHelpText>
    <label>Non Local Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>