FLY wire David/force-app/main/default/objects/Unrolled_Matrix__c/fields/Unique_Attribute_Combo_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Attribute_Combo_Key__c</fullName>
    <description>Created for BOPI-515</description>
    <formula>Unrolled_Attribute_Combo_Key__c &amp; &quot;_&quot; &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Attribute Combo Key</label>
    <type>Text</type>
</CustomField>