FLY wire David/force-app/main/default/objects/Unrolled_Matrix__c/fields/Unrolled_Attribute_Combo_Key__c.field-meta.xml
<CustomField>
    <fullName>Unrolled_Attribute_Combo_Key__c</fullName>
    <description>Created for BOPI-515</description>
    <formula>TEXT(Product_Code__c) &amp; TEXT(Transaction_Type__c) &amp; TEXT(Payment_Method__c) &amp; TEXT(CC_Country__c) &amp; TEXT(Non_Local_Currency__c) &amp; TEXT(Surcharging__c)</formula>
    <label>Unrolled Attribute Combo Key</label>
    <type>Text</type>
</CustomField>